-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta2
-
None
-
72308ce20 (dev), 5250a2d99 (6.7)
This code
import QtQuick QtObject { id: win component Foo: QtObject { property int progress: 0 } property int progress: 0 readonly property Foo configuring: Foo {} Component.onCompleted: { win.configuring.progress = win?.progress ?? 0 } }
leads to
/home/prcs1076/tmp/build-optional-Desktop_Qt_6_7_0_64-Debug/.rcc/qmlcache/appoptional_Main_qml.cpp:278:53: error: cannot convert ‘QVariant’ to ‘const QJSPrimitiveValue&’ 278 | r2_5 = QJSPrimitiveValue(QJSPrimitiveNull()).equals(r2_4); | ^~~~ | | | QVariant In file included from /var/home/prcs1076/Qt/6.7.0/gcc_64/include/QtQml/qqmlprivate.h:18, from /home/prcs1076/tmp/build-optional-Desktop_Qt_6_7_0_64-Debug/.rcc/qmlcache/appoptional_Main_qml.cpp:2: /var/home/prcs1076/Qt/6.7.0/gcc_64/include/QtQml/qjsprimitivevalue.h:445:52: note: initializing argument 1 of ‘constexpr bool QJSPrimitiveValue::equals(const QJSPrimitiveValue&) const’ 445 | constexpr bool equals(const QJSPrimitiveValue &other) const | ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~ ninja: build stopped: subcommand failed.
.
For Gerrit Dashboard: QTBUG-121909 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
537928,2 | Compiler: Convert from stored to original type when generating equality | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
538121,2 | Compiler: Convert from stored to original type when generating equality | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |