Compiler: Convert from stored to original type when generating equality

Fixes: QTBUG-121909
Change-Id: I913f59324364052d7893d4c4072f92fcf418a388
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 72308ce2076aef3b663aa769e32e71d4b0bf645c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>